--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Memory Game!</h1>
-        <p id="elapsed"></p>
+        <p id="elapsed">Elapsed Time</p>
 
         <div id="game-board"></div>
 
