fiugred out matching

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
         <h1>Memory Game!</h1>
         <button type="button" class="btn btn-default" id="new">New Game</button>
         <div class="row">
-            <div class="col-xs-3">Elapsed Time:<span id="elapsed"></span></div>
-            <div class="col-xs-3">Matches Made:<span id="matchesMade"></span></div>
-            <div class="col-xs-3">Matches Remaining:<span id="remaining"></span></div>
-            <div class="col-xs-3">Missed:<span id="matchesMissed"></span></div>
+            <span class="col-xs-3" id="elapsed">Elapsed Time: </span>
+            <span class="col-xs-3" id="matchesMade">Matches Made: </span>
+            <span class="col-xs-3" id="reamining">Matches Remaining: </span>
+            <span class="col-xs-3" id="matchesMissed">Missed: </span>
         </div>
         <div id="game-board"></div>
+
+        <div class = modal-body id="exit-modal">
+
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
